--- a/index.tmpl
+++ b/index.tmpl
@@ -22,7 +22,7 @@
     </div>
 
     <div class="container">
-        <form method="post" action="/">
+        <form method="post" action="/new">
          <div class="form-group row">
             <div class="col-lg-2">
                 <input class="form-control" id="en" name="en" placeholder="verbose" type="text"/>
