main: add proper random function

--- a/index.tmpl
+++ b/index.tmpl
@@ -18,7 +18,7 @@
     </div>
 
     <div class="container">
-        <div class="alert alert-success">Word of the Pageload:  <strong>{{ .RandomWord }}</strong></div>
+        <div class="alert alert-success">Word of the Pageload:  <strong>{{ random_word .}}</strong></div>
     </div>
 
     <div class="container">
