index: add link to github

--- a/index.tmpl
+++ b/index.tmpl
@@ -60,7 +60,7 @@
     <footer>
     <div class='container' style='text-align:center'>
     <hr>
-    (C) 2022 <a href='https://evilcookie.de'>Raphael Pour</a>| <a href='https://www.gnu.org/licenses/gpl-3.0.en.html'>GPL v3</a> | <a href='https://evilcookie.de/impressum.html'>Impressum</a>
+    (C) 2022 <a href='https://evilcookie.de'>Raphael Pour</a> | <a href='https://github.com/RaphaelPour/verbose'>Source</a> | <a href='https://www.gnu.org/licenses/gpl-3.0.en.html'>GPL v3</a> | <a href='https://evilcookie.de/impressum.html'>Impressum</a>
     </div>
     </footer>
 
