--- a/index.tmpl
+++ b/index.tmpl
@@ -58,7 +58,7 @@
         <td>{{$en}}</td>
         <td>{{join $translation.Words ", "}}</td>
         <td>
-        {{if $translation.Example.Original}}
+        {{if $translation.Example}}
             <details><summary>{{$translation.Example.Original}}</summary>
                 {{$translation.Example.Translation}}
             </details>
