--- a/index.tmpl
+++ b/index.tmpl
@@ -3,13 +3,13 @@
 <head>
     <title>Verbose</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/png" href="logo.png">
+    <link rel="shortcut icon" type="image/png" href="/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <div class='container jumbotron' style='padding-top:30px;padding-bottom:30px;'>
     <div class="row">
-        <div class="col-lg-2"><a href='.'><img src='logo.png'></a></div>
+        <div class="col-lg-2"><a href='/'><img src='/logo.png'></a></div>
         <div class="col-lg-4">
             <h1><em>verbose</em></h1>
             <p>wortreich, langatmig, ausführlich, weitschweifig</p>
@@ -50,6 +50,7 @@
         <th>EN</th>
         <th>DE</th>
         <th>Example</th>
+        <th>Edit</eh>
         </tr>
     </thead>
     <tbody>
@@ -58,12 +59,16 @@
         <td>{{$en}}</td>
         <td>{{join $translation.Words ", "}}</td>
         <td>
-        {{if $translation.Example}}
-            <details><summary>{{$translation.Example.Original}}</summary>
-                {{$translation.Example.Translation}}
+        {{if $translation.ExampleOriginal}}
+            <details><summary>{{$translation.ExampleOriginal}}</summary>
+                {{$translation.ExampleTranslation}}
             </details>
         {{end}}
         </td>
+        <td>
+            <a href="edit/{{$en}}">
+            <span class="glyphicon gyphicon-pencil">Edit</span>
+            </a></td>
     </tr>
     {{ end }}
     </tbody>
